--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,7 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   device_preview: ^0.8.0
+  flutter_screenutil: ^5.0.1
 
 dev_dependencies:
   flutter_test:
