--- a/analysis_options.yaml
+++ b/analysis_options.yaml
@@ -4,7 +4,8 @@ analyzer:
   exclude:
     - "**/*.g.dart"
     - "**/*.freezed.dart"
-
+  errors:
+    invalid_annotation_target: ignore
 linter:
   # The lint rules applied to this project can be customized in the
   # section below to disable rules from the `package:flutter_lints/flutter.yaml`
@@ -15,7 +16,6 @@ linter:
   rules:
     sort_constructors_first: true
     prefer_single_quotes: true
-    invalid_annotation_target: false
       
 # Additional information about this file can be found at
 # https://dart.dev/guides/language/analysis-options
